Fixed scrollbar graphical error

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,10 +12,6 @@ html {
     width: 0;  /* Remove scrollbar space */
     background: transparent;  /* Optional: just make scrollbar invisible */
   }
-  /* Optional: show position indicator in red */
-  ::-webkit-scrollbar-thumb {
-    background: #FF0000;
-  }
   
   //General styling
   * {
